Fix #2514: Strange wrapping of contribution instructions

--- a/web/src/components/pages/contribution/contribution.css
+++ b/web/src/components/pages/contribution/contribution.css
@@ -185,11 +185,8 @@
     }
 
     & .instruction {
-        display: flex;
         margin-top: 23px;
         min-height: 23px;
-        justify-content: center;
-        align-items: center;
         font-style: italic;
         color: var(--near-black);
 
